--- a/deployment-dev.yaml
+++ b/deployment-dev.yaml
@@ -14,9 +14,26 @@ spec:
     spec:
       containers:
       - name: nginx
-        image: cithit/roseaw:latest
+        image: cithit/mosinsmj-225:latest
         ports:
-        - containerPort: 80  # Expose NGINX on port 80        
+        - containerPort: 80  # Expose NGINX on port 80
+---
+apiVersion: networking.k8s.io/v1
+kind: Ingress
+metadata:
+  name: nginx
+spec:
+  rules: 
+  - host: 
+    http:
+      paths:
+      - path: /
+        pathType: ImplementationSpecific
+        backend: 
+          service:
+            name: dev-service
+            port:
+              number: 80
 ---
 apiVersion: v1
 kind: Service
